[project]
name = "gsd-capacity-investment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Patricio Hernandez Senosiain", email = "hdzsen.patricio@gmail.com" },
    { name = "Filippo Paternollo", email = "filippo.paternollo@gmail.com" }
]
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
