[project]
name = "gsd-capacity-investment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Patricio Hernandez Senosiain", email = "hdzsen.patricio@gmail.com" },
    { name = "Filippo Paternollo", email = "filippo.paternollo@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2.2",
    "scipy>=1.15.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
